[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Score.gd" type="Script" id=2]
[ext_resource path="res://scripts/HitPoints.gd" type="Script" id=3]
[ext_resource path="res://scripts/game.gd" type="Script" id=4]
[ext_resource path="res://scenes/Tree1.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Tree2.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Shrub2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Flower.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Rock1.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Rock2.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Shrub1.tscn" type="PackedScene" id=11]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="HitPoints" type="Label" parent="."]
margin_right = 80.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
size_flags_stretch_ratio = 0.0
text = "HP: 50/50"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
text = "Score: 0"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZombieTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="RobotTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 944.355, 595.185 )

[node name="Foliage" type="Node" parent="."]

[node name="Rock1" parent="Foliage" instance=ExtResource( 9 )]
position = Vector2( 807.105, 966.385 )

[node name="Rock2" parent="Foliage" instance=ExtResource( 10 )]
position = Vector2( 1648.76, 380.251 )

[node name="Shrub1" parent="Foliage" instance=ExtResource( 11 )]
position = Vector2( 501.227, 622.36 )

[node name="Shrub2" parent="Foliage" instance=ExtResource( 7 )]
position = Vector2( 565.383, 838.127 )

[node name="Tree1" parent="Foliage" instance=ExtResource( 5 )]
position = Vector2( 1374.35, 513.167 )

[node name="Tree2" parent="Foliage" instance=ExtResource( 6 )]
position = Vector2( 423.617, 349.523 )

[node name="Flower" parent="Foliage" instance=ExtResource( 8 )]
position = Vector2( 703.279, 415.978 )

[node name="Rock3" parent="Foliage" instance=ExtResource( 9 )]
position = Vector2( 1172.91, 233.762 )

[node name="Rock4" parent="Foliage" instance=ExtResource( 10 )]
position = Vector2( 244.015, 280.925 )

[node name="Shrub3" parent="Foliage" instance=ExtResource( 11 )]
position = Vector2( 756.652, 239.914 )

[node name="Shrub4" parent="Foliage" instance=ExtResource( 11 )]
position = Vector2( 1503.05, 196.852 )

[node name="Shrub5" parent="Foliage" instance=ExtResource( 11 )]
position = Vector2( 1697.85, 629.518 )

[node name="Shrub6" parent="Foliage" instance=ExtResource( 7 )]
position = Vector2( 1285.69, 725.893 )

[node name="Tree3" parent="Foliage" instance=ExtResource( 5 )]
position = Vector2( 203.004, 732.045 )

[node name="Tree4" parent="Foliage" instance=ExtResource( 6 )]
position = Vector2( 1517.4, 959.656 )

[node name="Flower2" parent="Foliage" instance=ExtResource( 8 )]
position = Vector2( 328.087, 898.139 )

[node name="Flower3" parent="Foliage" instance=ExtResource( 8 )]
position = Vector2( 1189.32, 912.493 )
[connection signal="timeout" from="ZombieTimer" to="." method="_on_ZombieTimer_timeout"]
[connection signal="timeout" from="RobotTimer" to="." method="_on_RobotTimer_timeout"]
